--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -83,4 +83,4 @@ production:
       options:
         skip_version_check: true
         safe: true
-        raise_not_found_error: false
+        # raise_not_found_error: false
